# dev-starter

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/: __init__.py  main.py
python/budget_core/: __init__.py  models.py  service.py  storage.py
python/calendar_core/: __init__.py  models.py  service.py  storage.py
python/calendar_sync/: __init__.py  base.py  models.py  service.py
python/calendar_sync/providers/: __init__.py  google.py  icloud.py  outlook.py
python/finance_core/: __init__.py  models.py  service.py  storage.py
python/persistence/: __init__.py  sqlite.py
scripts/: bootstrap.sh
src/c/: main.c
src/cpp/: main.cpp
tests/: test_budget_core.py  test_calendar_core.py  test_calendar_sync.py  test_finance_core.py  test_icloud_calendar_sync.py  test_sqlite_persistence.py
